2000-06-21  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-header-item.c: Changed this to move the cell to the
	nearest edge instead of to the left of the column it's over.

	* e-table-header.c: Made target_index equal to eti->col_count be a
	valid parameter to e_table_header_move.

2000-06-21  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-header.c: Made moving columns to the right work
	properly.

2000-06-20  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-group-leaf.c: Fix a minor warning.

	* e-table-item.c: Add to the selection if shift is held down.
	Show cursor when changing sort (or if table changes majorly.)

2000-06-20  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-defines.h: Fix HEADER_PADDING.

2000-06-20  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-item.c: Fix cursor column information.

2000-06-20  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-group-container.c, e-table-group-leaf.c,
	e-table-group.c, e-table-group.h: Removed the unfocus method since
	that's handled by the canvas itself now.

	* e-table-item.c, e-table-item.h: Finished adapting ETableItem to
	use the canvas selection/cursor system.  Selection and cursor now
	use row numbers associated with the source model instead of the
	sorted model (if the model they are given is an ETableSubset.)
	This has no effect on the interface, except that unfocus was
	removed and e_table_item_focus was renamed to
	e_table_item_set_cursor.

2000-06-20  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-item.c, e-table-item.h: Started adapting ETableItem to
	use the canvas selection/cursor system.

2000-06-17  Chris Toshok  <toshok@helixcode.com>

	* e-tree-model.c (e_tree_model_node_insert): call
	e_table_model_row_inserted instead of e_table_model_changed.

2000-06-17  Christopher James Lahey  <clahey@helixcode.com>

	* e-cell-text.c: Made cells with strikeout on have a line from the