@@ -1,5 +1,12 @@
 2000-06-21  Christopher James Lahey  <clahey@helixcode.com>
 
+	* e-table-field-chooser-dialog.c: Made the Close button work.
+
+	* e-table-field-chooser.glade, e-table-field-chooser.glade.h:
+	Added a text description of this dialog.
+
+2000-06-21  Christopher James Lahey  <clahey@helixcode.com>
+
 	* e-table-header-item.c: Changed this to move the cell to the
 	nearest edge instead of to the left of the column it's over.
 
